--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
     "react-router": "^6.26.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
